# Jarvis-unlimited

./: .env.example  .gitignore  10web_ai.yml  README.md  jarvis-agent-desktop.code-workspace  package-lock.json  package.json  wix_ai.yml
apps/backend/: adk_implementation.md  amd_page_snapshot  lovableissues.md  pyproject.toml
apps/backend/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
apps/backend/app/agent/: __init__.py  agent.py  event_translation.py  prompt.py  provider_config.py  root_agent.py  runner.py  sub_agent_launcher.py
apps/backend/app/mcp/: __init__.py  adk_toolset.py  presets.py
apps/backend/app/memory/: __init__.py  dreamer.py  manifest.py  node_document.py  node_store.py  observations.py  schemas.py  scout.py  validator.py
apps/backend/app/routes/: chat.py  health.py  mcp.py  settings.py  transcription.py  workspaces.py
apps/backend/app/runtime/: __init__.py  adk_runner.py
apps/backend/app/security/: __init__.py  command_policy.py  path_policy.py
apps/backend/app/services/: chat_service.py  conversation_context_service.py  desktop_vision_service.py  health_service.py  mcp_service.py  memory_service.py  session_terminal_service.py  settings_service.py  text_to_speech_service.py  transcription_service.py  workspace_service.py
apps/backend/app/tools/: __init__.py  agent_tools.py  edit_tools.py  file_explorer.py  memory_tools.py  models.py  search_tools.py  terminal_tools.py  vision_tools.py
apps/backend/tests/: test_agent.py  test_api.py  test_memory.py  test_path_policy.py  test_tools.py
data/: jarvis.sqlite
(+608 files in other folders)
