[project]
name = "jarvis-agent-backend"
version = "0.1.0"
description = "FastAPI and Google ADK backend for Jarvis Agent Desktop."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "google-adk>=1.0.0",
  "kokoro>=0.9.4",
  "litellm>=1.60.0",
  "mcp>=1.27.2",
  "mlx-whisper>=0.4.3",
  "botocore>=1.35.0",
  "pydantic-settings>=2.7.0",
  "pyttsx3>=2.98",
  "python-dotenv>=1.0.1",
  "soundfile>=0.13.1",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
